fix expander z-index causing display over site switcher regression

--- a/get/markdown.css
+++ b/get/markdown.css
@@ -46,7 +46,7 @@
 .markdown .post .title > a { color: rgb(var(--rgb-black)); }
 .markdown .expandable { overflow: hidden; position: relative; border-bottom: 1px dashed rgb(var(--rgb-mid)) !important; }
 .markdown .expandable>code { overflow: hidden; }
-.markdown .expander { position: absolute; z-index: 999; height: 50px; top: 250px; padding-top: 34px; left: 0; right: 0; font-family: var(--font-regular); font-size: 12px; text-align: center;
+.markdown .expander { position: absolute; z-index: 2; height: 50px; top: 250px; padding-top: 34px; left: 0; right: 0; font-family: var(--font-regular); font-size: 12px; text-align: center;
                       color: rgb(var(--rgb-dark)); background: linear-gradient(to bottom, rgba(var(--rgb-light),0) 0%, rgb(var(--rgb-light)) 40%, rgb(var(--rgb-light)) 25%); }
 .markdown .expander:hover { text-decoration: underline; cursor: pointer; }
 .markdown .post .hover { display: none; }
@@ -102,5 +102,5 @@
 .dbfiddle tbody>tr:nth-child(even)>td { background: rgba(var(--rgb-light),0.1); }
 .dbfiddle .qp { overflow-x: auto; overflow-y: hidden; border: 1px solid rgb(var(--rgb-dark)); border-radius: 3px; margin-top: 5px; padding: 2px }
 .dbfiddle .qp-statement-header { display: none; }
-.qp-tt { z-index: 999 !important; box-shadow: 0 0 2px 2px rgb(var(--rgb-white)); }
+.qp-tt { z-index: 99 !important; box-shadow: 0 0 2px 2px rgb(var(--rgb-white)); }
 .katex-block { overflow: auto; }
